2008-10-03  Martin Maechler  <maechler@stat.math.ethz.ch>

	* src/Csparse.c (isValid_Csparse): new utility
	* src/chm_common.c (as_cholmod_sparse): add validity check early
	* tests/validObj.R: test the above

2008-10-02  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/sparseMatrix.R (printSpMatrix2): another validObject(.) call
	* src/Makefile: getting rid of SUBSTAMP etc, thanks to Simon U.

2008-09-23  Martin Maechler  <maechler@stat.math.ethz.ch>

	* src/dsyMatrix.c (dsyMatrix_as_dspMatrix): copy 'factors' slot
	* tests/dpo-test.R: test for it

	* R/Tsparse.R (intI): improve one error message.

2008-09-22  Martin Maechler  <maechler@stat.math.ethz.ch>

	* DESCRIPTION (Version): 0.999375-15 to be released

	* R/diagMatrix.R (diag o <Matrix>): explicit setMethods,
	in order to keep result diagonal in many more cases.
	(coerce) to denseMatrix now *does* coerce.

	* man/diagonalMatrix-class.Rd: \alias{} for these.

	* R/Auxiliaries.R (.dense.prefixes): ".diMatrix" has not been dense
	anymore!

	* R/dMatrix.R: as(<dMatrix>, <nMatrix>): enable Cholesky/BunchKaufman

2008-09-20  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/lsparseMatrix.R (C2l): as(<d.Csparse>, "lMatrix") should
	preserve NAs.

	* R/Ops.R (Arith, Compare): keep diag="U" in more cases when sensible

2008-09-19  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/Ops.R (Arith): better <ddenseMatrix> o <numeric> which
	preserves symmetry / triangularity in "obvious" cases.

	* R/dpoMatrix.R: setAs(., "lMatrix") and setAs(., "nMatrix")
	* R/dppMatrix.R: ditto
	* man/dpoMatrix-class.Rd:

	* inst/test-tools.R (checkMatrix): add [dln]Matrix <-> [dln]Matrix
	coercion checks.
	* tests/indexing.Rout.save: more ambiguity warnings from the new checks.

	* R/dMatrix.R: dMatrix -> nMatrix: fix dense case.

2008-09-18  Martin Maechler  <maechler@stat.math.ethz.ch>

	* tests/factorizing.R: test expand(<sparseLU>)

	* src/dgCMatrix.c (dgCMatrix_LU): fill @Dim slot correctly.
