@@ -3,3 +3,4 @@ assign_hidden.R
 wrld_1deg
 misc/
 doc/unused
+inst/po
