@@ -1,6 +1,6 @@
 Package: Matrix
 Version: 0.999375-16
-Date: 2008-10-..
+Date: 2008-10-15
 Title: Sparse and Dense Matrix Classes and Methods
 Author: Douglas Bates <bates@stat.wisc.edu> and Martin Maechler <maechler@stat.math.ethz.ch>
 Maintainer: Doug and Martin <Matrix-authors@R-project.org>
@@ -15,6 +15,6 @@ LazyData: no
 LazyDataNote: no longer available, since we use data/*.R *and* our classes
 License: GPL (>= 2)
 LicenseDetails: The Matrix package includes libraries AMD, CHOLMOD,
- COLAMD, CSparse and SQPR from the SuiteSparse collection of Tim
- Davis.  All sections of that code are covered by the GPL or LGPL  
+ COLAMD, CSparse and SPQR from the SuiteSparse collection of Tim
+ Davis.  All sections of that code are covered by the GPL or LGPL
  licenses.  See the directory doc/UFsparse for details.
